Fix overflow x on mobile

--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,10 @@
 
 /* start of general styling */
 
+html, body {
+  overflow-x: hidden;
+}
+
 html {
   font-family: Arial, Helvetica, sans-serif; /* fallback */
 }
@@ -301,7 +305,9 @@ p {
 }
 @media screen and (max-width: 480px) {
   #specials {
-    padding: 20px 16px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0;
     gap: 20px;
   }
 }
@@ -475,7 +481,7 @@ p {
 }
 @media screen and (max-width: 480px) {
   .special-image {
-    width: 300px;
+    width: 320px;
     border-radius: 16px;
   }
 }
